# hyperdeck-adapter

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  justfile
.github/workflows/: ci.yml  pages.yml  pr-title.yml  release.yml  version.yml
cmd/hyperdeck-adapter/: main.go
cmd/injcheck/: main.go
crates/hyperdeck-core/: Cargo.toml
crates/hyperdeck-core/src/: error.rs  lib.rs  port.rs  testsupport.rs
crates/hyperdeck-core/src/app/: lockmanager.rs  mod.rs  reconciler.rs  session.rs  virtualdeck.rs
crates/hyperdeck-core/src/clipsource/: mod.rs  playlist.rs  positional.rs
crates/hyperdeck-core/src/config/: default.rs  mod.rs  selection.rs  store.rs
crates/hyperdeck-core/src/domain/: chord.rs  clip.rs  mod.rs  profile.rs  transport.rs  window.rs
crates/hyperdeck-core/src/protocol/: codes.rs  mod.rs  parser.rs  responder.rs  server.rs
crates/hyperdeck-core/src/stateprobe/: mod.rs  titleregex.rs  uia.rs
crates/hyperdeck-os/: Cargo.toml
crates/hyperdeck-os/src/: lib.rs  uia.rs  vlchttp.rs
crates/hyperdeck-os/src/injector/: keymap_darwin.rs  keymap_windows.rs  macos_impl.rs  mod.rs  windows_impl.rs
docs/: hyperdeck-adapter-design-memo.html  profile-selection-tray-design-memo.html
docs/superpowers/plans/: 2026-06-11-hyperdeck-adapter.md  2026-06-19-auto-release-on-merge.md  2026-06-19-profile-selection-tray.md
docs/superpowers/specs/: 2026-06-11-hyperdeck-adapter-design.md  2026-06-12-windows-injector-handoff.md  2026-06-19-auto-release-on-merge-design.md  2026-06-19-profile-selection-tray-design.md
examples/: profiles.yaml
internal/adapter/driven/clipsource/: clipsource_test.go  factory.go  mitti.go  playlist.go  positional.go
internal/adapter/driven/clock/: clock.go  clock_test.go
internal/adapter/driven/config/: default.go  default_profiles.yaml  default_test.go  selection.go  selection_test.go  store.go  store_test.go
internal/adapter/driven/injector/: accessibility_other.go  cinject_darwin.h  cinject_darwin.m  helpers_test.go  injector_darwin.go  injector_mock.go  injector_mock_test.go  injector_noop.go  injector_noop_test.go  injector_windows.go  keymap_darwin.go  keymap_darwin_test.go  keymap_windows.go  keymap_windows_test.go
internal/adapter/driven/stateprobe/: factory.go  none.go  stateprobe_test.go  titleregex.go  uia.go
internal/adapter/driven/tray/: gen_icons.go  icons.go  profilemenu.go  profilemenu_test.go  status.go  tray.go  tray_noop.go  tray_test.go
internal/adapter/driven/uia/: uia_other.go  uia_windows.go
internal/adapter/driven/vlchttp/: vlchttp.go  vlchttp_test.go
internal/adapter/driving/hyperdeck/: codes.go  parser.go  parser_property_test.go  parser_test.go  responder.go  responder_test.go  server.go  server_test.go
internal/core/app/: errors.go  hardening_test.go  lockmanager.go  lockmanager_test.go  reconciler.go  reconciler_test.go  session.go  session_test.go  virtualdeck.go  virtualdeck_api_test.go  virtualdeck_query_test.go  virtualdeck_test.go
internal/core/domain/: chord.go  chord_test.go  clip.go  doc.go  profile.go  profile_test.go  transport.go  transport_test.go  window.go
internal/core/port/: inbound.go  outbound.go
scripts/: hyperdeck-demo.py
site/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/src/: downloads.ts  easterEgg.ts  main.ts  scene.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  main.rs
testdata/: profiles.yaml  sample.m3u  sample.xspf
ui/: index.html
