[package]
name = "hyperdeck-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, OS-independent core of the HyperDeck adapter: domain model, protocol, and application services."

[dependencies]
quick-xml = { version = "0.40.1", features = ["serialize"] }
regex = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
