[package]
name = "hyperdeck-os"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OS- and player-specific driven adapters for the HyperDeck adapter (injection, window enumeration, UI Automation, VLC HTTP)."

[dependencies]
hyperdeck-core = { path = "../hyperdeck-core" }
# Plain-HTTP only (VLC's control interface is http on localhost); no TLS keeps
# the dependency tree light and free of system/native crypto deps.
ureq = { version = "2", default-features = false }
base64 = "0.22"
