[package]
name = "hyperdeck-os"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OS- and player-specific driven adapters for the HyperDeck adapter (injection, window enumeration, UI Automation, VLC HTTP)."

[dependencies]
hyperdeck-core = { path = "../hyperdeck-core" }
# Plain-HTTP only (VLC's control interface is http on localhost); no TLS keeps
# the dependency tree light and free of system/native crypto deps.
ureq = { version = "2", default-features = false }
base64 = "0.22"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["elcapitan"] } # elcapitan: CGEvent::post_to_pid
core-foundation = "0.10"
objc2 = "0.5"
# libc: NSRunningApplication::runningApplicationWithProcessIdentifier
objc2-app-kit = { version = "0.2", features = ["NSRunningApplication", "libc"] }
objc2-foundation = "0.2"
